--- a/backend/package.json
+++ b/backend/package.json
@@ -1,16 +1,13 @@
 {
   "name": "backend",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "test": "jest",
     "start": "node server.js",
     "dev": "nodemon server.js"
   },
-  "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
   "dependencies": {
     "axios": "^1.12.2",
     "bcryptjs": "^3.0.2",
@@ -21,13 +18,10 @@
     "express": "^5.1.0",
     "express-session": "^1.18.2",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.18.1",
-    "nodemailer": "^7.0.6"
+    "mongoose": "^8.18.1"
   },
   "devDependencies": {
-    "jest": "^30.1.3",
-    "nodemon": "^3.1.10",
-    "supertest": "^7.1.4"
+    "nodemon": "^3.1.10"
   },
   "type": "commonjs"
 }
